Added the pronunciation: field to the internationalization schema to be used (Burst 15)

--- a/i18n/schema.yaml
+++ b/i18n/schema.yaml
@@ -12,3 +12,4 @@ tags: []              # list of tags (e.g., "AI", "ethics", "model")
 related_terms: []     # cross-links to other term IDs
 notes: ""             # optional clarifications or teaching notes
 anchor: ""            # cultural analogy or classical reference to support understanding
+pronunciation: ""    # phonetic transcription or audio link
